template/css/scss/layout/_base.scss
/* ... */
.header__nav-link--github-mobile {
	margin-right: 45px;
}
.footer {
	width: 100%;
	flex: 0 0 auto;
	padding: var(--padding);
	border-top: 1px solid var(--c-secondary);
	margin-top: auto;
	@media (max-width: 768px) {
		padding: 10px;
	}
	&__text {
		margin: 0;
		font-size: 0.9em;
		text-align: center;
		span {
			display: block;
		}
		&-part {
			margin: 0 5px;
		}
	}
	&-wrap {
		display: flex;
		flex-flow: row wrap;
		padding-top: 10px;
		@media (max-width: 768px) {
			justify-content: center;
		}
	}
	&__item-link {
		flex: 0 0 33.333%;
		max-width: 33.333%;
		display: flex;
		flex-flow: column wrap;
		text-align: center;
		&--center {
			align-content: center;
		}
		&--end {
			align-content: center;
		}
		@media (max-width: 768px) {
			flex: 0 0 50%;
			max-width: 50%;
			display: flex;
			flex-flow: column wrap;
			text-align: center;
			margin-bottom: 20px;
		}
	}
	&__link-title {
		background: linear-gradient(106deg, rgba(199, 70, 111, 0.9) 0%, #51daea 100%);
		background-clip: text;
		-webkit-background-clip: text;
		-webkit-text-fill-color: rgba(0, 0, 0, 0);
		font-weight: 900;
	}
	&__link {
		&:hover {
			background: linear-gradient(106deg, rgba(199, 70, 111, 0.9) 0%, #51daea 100%);
			background-clip: text;
			-webkit-background-clip: text;
			-webkit-text-fill-color: rgba(0, 0, 0, 0);
			text-decoration: underline;
		}
	}
}

.goTop {
	position: fixed;
	bottom: 20px;
	right: 20px;
	z-index: 99;
	cursor: pointer;
	transition: all 0.3s;
	svg {
		width: 50px;
		height: 50px;
		@media (max-width: 768px) {
			width: 38px;
			height: 38px;
		}
	}
	&:hover {
		bottom: 30px;
	}
}

.main-contents{
	overflow-x: hidden;
}

.container{
	max-width: 1200px;
	padding: 0 15px;
	margin: 0 auto;
	width: 100%;
	height: 100%;
}

.header-info{
	padding: 30px 0 0 0;
	&__logo{
		max-width: 95px;
	}
	&-wrapper{
		display: flex;
    	align-items: center;
    	justify-content: space-between;
		position: relative;
	}
	&-navigation{
		display: flex;
		li{
			margin-right: 35px;
			font-size: 22px;
			&:last-child{
				margin-right: 0;
			}
		}
	}
	&-socials{
		a{
			margin-right: 30px;
			&:last-child{
				margin-left: 0;
			}
		}
	}
}
.welcome{
    background: url(../img/bg.png);
    background-position: center;
    background-size: cover;
	&__title{
		font-weight: 600;
		font-size: 100px;
		line-height: 100%;
		text-align: center;
		background: linear-gradient(150deg, #fff 0%, #c1c1c1 100%);
		background-clip: text;
		-webkit-background-clip: text;
		-webkit-text-fill-color: transparent;
		text-shadow: 3px 4px 20px #e8e8e8;
		span{
			display: block;
		}
		padding-top: 50px;
	}
	&__description{
		text-align: center;
		max-width: 700px;
		margin: 0 auto;
		font-weight: 500;
		font-size: 20px;
		padding: 25px 0 115px 0;
	}
}

.global-title{
	display: flex;
	align-items: center;
	text-transform: uppercase;	
	&__img{
		margin-right: 20px;
	}
	&__text{
		font-size: 36px;
		font-weight: 600;
	}
}
.news{
	padding: 0 0 70px 0;
	&-wrap{
		display: flex;
		flex-flow: row wrap;
		padding-top: 35px;
	}
	&__wrap{
		flex: 0 0 33.333%;
		max-width: 33.333%;
		display: flex;
		padding: 0 15px;
		margin-bottom: 30px;
	}
	&__item{
		padding: 20px;
		background: linear-gradient(140deg, rgba(60, 58, 58, 0.7) 0%, rgba(69, 68, 68, 0.7) 100%);
		border-radius: 12px;
		display: flex;
		flex-flow: column wrap;
	}
	&__img{
		img{
			width: 325px;
			height: 190px;
			object-fit: cover;
			border-radius: 6px;
		}
	}
	&__title{
		font-weight: 700;
		font-size: 20px;
		background: linear-gradient(106deg, rgba(199, 70, 111, 0.9) 0%, #51daea 100%);
		background-clip: text;
		-webkit-background-clip: text;
		-webkit-text-fill-color: transparent;
		line-height: 1;
		padding: 15px 0 10px 0;
	}
	&__btn{
		padding-top: 25px;
		margin-top: auto;
		.btn-blog{
			background: linear-gradient(270deg, #c74662 0%, #7251ea 100%);
			border-radius: 12px;
			max-width: 180px;
			width: 100%;
			height: 34px;
			display: flex;
			justify-content: center;
			align-items: center;
			font-weight: 500;
			font-size: 17px;
			text-transform: uppercase;
			font-weight: 700;
		}
	}
}

.contacts{
	&-wrap{
		position: relative;
		padding-top: 50px;
	}
	&-info{
		display: flex;
		flex-flow: column wrap;
		max-width: 530px;
		&__info{
			display: flex;
			align-items: center;
			font-size: 28px;
			font-weight: 500;
			margin-bottom: 20px;
			line-height: 1.2;
			&--first{
				align-items: unset;
			}
			img{
				margin-right: 15px;
				width: 52px;
				height: 52px;
			}
			&--resev{
				//background: linear-gradient(150deg, #fff 0%, #c1c1c1 100%);
				background: linear-gradient(270deg, #c74662 0%, #7251ea 100%);
				color: #ffffff;
				max-width: 260px;
				border-radius: 17px;
				justify-content: center;
				align-items: center;
				padding: 10px 0;
				margin-top: 20px;
				img{
					width: 30px;
					height: 30px;
				}
				span{
					background: linear-gradient(150deg, #fff 0%, #c1c1c1 100%);
					background-clip: text;
					-webkit-background-clip: text;
					-webkit-text-fill-color: transparent;
				}
			}
		}
	}
	&-map{
		width: 100%;
		height: 400px;
		position: absolute;
		right: -170px;
		top: 0;
		max-width: 770px;
	}
}

.article{
	padding: 40px 0;
	&__title{
		padding-bottom: 15px;
		font-size: 24px;
		background: linear-gradient(106deg, rgba(199, 70, 111, 0.9) 0%, #51daea 100%);
		background-clip: text;
		-webkit-background-clip: text;
		-webkit-text-fill-color: rgba(0, 0, 0, 0);
		line-height: 1;
		font-weight: 700;
		padding-bottom: 20px;
	}
	&__img{
		img{
			max-width: 500px;
			width: 100%;
			height: 220px;
			border-radius: 16px;
			object-fit: cover;
		}
	}
}
/* ... */

